Fix Java 17 compatibility: replace getFirst() with get(0)